@@ -4,7 +4,7 @@
       "Sven Kirmess <sven.kirmess@kzone.ch>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 6.011, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Zilla version 6.012, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "freebsd"
    ],
@@ -42,7 +42,6 @@
             "Test::MockModule" : "0",
             "Test::More" : "0",
             "Test::TempDir::Tiny" : "0",
-            "autodie" : "0",
             "lib" : "0",
             "perl" : "5.006",
             "subs" : "0"
@@ -68,6 +67,7 @@
       }
    },
    "version" : "0.006",
+   "x_generated_by_perl" : "v5.24.0",
    "x_serialization_backend" : "Cpanel::JSON::XS version 3.0231"
 }
 
