@@ -7,7 +7,6 @@ build_requires:
   Test::MockModule: '0'
   Test::More: '0'
   Test::TempDir::Tiny: '0'
-  autodie: '0'
   lib: '0'
   perl: '5.006'
   subs: '0'
@@ -15,7 +14,7 @@ configure_requires:
   ExtUtils::MakeMaker: '0'
   perl: '5.006'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 6.011, CPAN::Meta::Converter version 2.150010'
+generated_by: 'Dist::Zilla version 6.012, CPAN::Meta::Converter version 2.150010'
 license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -41,4 +40,5 @@ resources:
   homepage: https://github.com/skirmess/App-SSH-SwitchShell
   repository: https://github.com/skirmess/App-SSH-SwitchShell.git
 version: '0.006'
+x_generated_by_perl: v5.24.0
 x_serialization_backend: 'YAML::Tiny version 1.70'
