@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.011.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.012.
 use strict;
 use warnings;
 
@@ -31,7 +31,6 @@ my %WriteMakefileArgs = (
     "Test::MockModule" => 0,
     "Test::More" => 0,
     "Test::TempDir::Tiny" => 0,
-    "autodie" => 0,
     "lib" => 0,
     "subs" => 0
   },
@@ -50,7 +49,6 @@ my %FallbackPrereqs = (
   "Test::MockModule" => 0,
   "Test::More" => 0,
   "Test::TempDir::Tiny" => 0,
-  "autodie" => 0,
   "lib" => 0,
   "strict" => 0,
   "subs" => 0,
