@@ -3,7 +3,6 @@
 use 5.006;
 use strict;
 use warnings;
-use autodie;
 
 use Capture::Tiny qw(capture);
 use Cwd;
@@ -26,10 +25,10 @@ sub main {
     my $tmpdir = tempdir();
 
     my $shell_from_getpwuid = "$tmpdir/sh";
-    open my $fh, '>', $shell_from_getpwuid;
-    close $fh;
+    open my $fh, '>', $shell_from_getpwuid or BAIL_OUT("Cannot write file $shell_from_getpwuid: $!");
+    close $fh or BAIL_OUT("Cannot write file $shell_from_getpwuid: $!");
 
-    chmod 0755, $shell_from_getpwuid;
+    _chmod( 0755, $shell_from_getpwuid );
 
     my @getpwuid_ref = ( 'username', 'x', 1000, 1000, q{}, q{}, q{}, '/tmp', $shell_from_getpwuid );
 
@@ -48,10 +47,10 @@ sub main {
     }
 
     my $shell_1 = "$tmpdir/testshell";
-    open $fh, '>', $shell_1;
-    close $fh;
+    open $fh, '>', $shell_1 or BAIL_OUT("Cannot write file $shell_1: $!");
+    close $fh or BAIL_OUT("Cannot write file $shell_1: $!");
 
-    chmod 0644, $shell_1;
+    _chmod( 0644, $shell_1 );
     {
         local $ENV{SHELL} = '/bin/dummy';
         local @ARGV = ($shell_1);
@@ -62,7 +61,7 @@ sub main {
         is( $stderr,     "Shell '$shell_1' is not executable\n", '... prints that shell is not executable to STDERR' );
     }
 
-    chmod 0755, $shell_1;
+    _chmod( 0755, $shell_1 );
   SKIP: {
         skip "File '$shell_1' is not executable - this OS seems to require more then chmod 0755" if !-x $shell_1;
 
@@ -77,7 +76,7 @@ sub main {
 
     {
         my $cwd = cwd();
-        chdir $tmpdir;
+        _chdir($tmpdir);
 
         local $ENV{SHELL} = '/bin/dummy';
         local @ARGV = ('testshell');
@@ -87,10 +86,10 @@ sub main {
         is( $stdout,     q{},                                           '... prints nothing to STDOUT' );
         is( $stderr,     "Shell 'testshell' is not an absolute path\n", '... prints that shell is not absolute path to STDERR' );
 
-        chdir $cwd;
+        _chdir($cwd);
     }
 
-    chmod 0644, $shell_from_getpwuid;
+    _chmod( 0644, $shell_from_getpwuid );
     {
         local $ENV{SHELL} = '/bin/dummy';
         local @ARGV = ();
@@ -101,7 +100,7 @@ sub main {
         is( $stderr,     q{},                  '... prints nothing to STDERR' );
     }
 
-    chmod 0644, $shell_1;
+    _chmod( 0644, $shell_1 );
     {
         local $ENV{SHELL} = '/bin/dummy';
         local @ARGV = ($shell_1);
@@ -114,7 +113,7 @@ sub main {
 
     {
         my $cwd = cwd();
-        chdir $tmpdir;
+        _chdir($tmpdir);
 
         local $ENV{SHELL} = '/bin/dummy';
         local @ARGV = ('testshell');
@@ -124,13 +123,27 @@ sub main {
         is( $stdout,     q{},                                           '... prints nothing to STDOUT' );
         is( $stderr,     "Shell 'testshell' is not an absolute path\n", '... prints not absolute path error message to STDERR' );
 
-        chdir $cwd;
+        _chdir($cwd);
     }
 
     #
     done_testing();
 
     exit 0;
+}
+
+sub _chdir {
+    my ($dir) = @_;
+
+    my $rc = chdir $dir;
+    BAIL_OUT("chdir $dir: $!") if !$rc;
+    return $rc;
+}
+
+sub _chmod {
+    my $rc = chmod @_;
+    BAIL_OUT("chmod @_: $!") if !$rc;
+    return $rc;
 }
 
 # vim: ts=4 sts=4 sw=4 et: syntax=perl
