@@ -43,7 +43,7 @@ verbose = [%p] %m at %f line %l, near '%r'\n
 [ControlStructures::ProhibitNegativeExpressionsInUnlessAndUntilConditions]
 
 [ControlStructures::ProhibitPostfixControls]
-flowcontrol = skip
+flowcontrol = BAIL_OUT skip
 
 [ControlStructures::ProhibitUnlessBlocks]
 [ControlStructures::ProhibitUnreachableCode]
@@ -143,7 +143,7 @@ forbid_use_version = 1
 [ValuesAndExpressions::ProhibitEscapedCharacters]
 [ValuesAndExpressions::ProhibitImplicitNewlines]
 [ValuesAndExpressions::ProhibitInterpolationOfLiterals]
-[ValuesAndExpressions::ProhibitLeadingZeros]
+#[ValuesAndExpressions::ProhibitLeadingZeros]
 [ValuesAndExpressions::ProhibitLongChainsOfMethodCalls]
 #[ValuesAndExpressions::ProhibitMagicNumbers]
 [ValuesAndExpressions::ProhibitMismatchedOperators]
